league player endpoints
