# server/v1/players/models.go
@@ -23,22 +23,23 @@ type Player struct {
 }
 
 type PlayerModel struct {
-	Id              string              `json:"id"`
-	Height          *float64            `json:"height"`
-	Weight          *float64            `json:"weight"`
-	Handedness      *string             `json:"handedness"`
-	Racket          *string             `json:"racket"`
-	MatchesExpected int                 `json:"matches_expected"`
-	MatchesPlayed   int                 `json:"matches_played"`
-	MatchesWon      int                 `json:"matches_won"`
-	SeasonsPlayed   int                 `json:"seasons_played"`
-	WinningRatio    float64             `json:"winning_ratio"`
-	ActivityRatio   float64             `json:"activity_ratio"`
-	Ranking         *int                `json:"ranking"`
-	Elo             *int                `json:"elo"`
-	Account         AccountModel        `json:"account"`
-	CurrentLeague   *CurrentLeagueModel `json:"current_league"`
-	CreatedAt       time.Time           `json:"created_at"`
+	Id               string              `json:"id"`
+	Height           *float64            `json:"height"`
+	Weight           *float64            `json:"weight"`
+	Handedness       *string             `json:"handedness"`
+	Racket           *string             `json:"racket"`
+	MatchesExpected  int                 `json:"matches_expected"`
+	MatchesPlayed    int                 `json:"matches_played"`
+	MatchesWon       int                 `json:"matches_won"`
+	MatchesScheduled int                 `json:"matches_scheduled"`
+	SeasonsPlayed    int                 `json:"seasons_played"`
+	WinningRatio     float64             `json:"winning_ratio"`
+	ActivityRatio    float64             `json:"activity_ratio"`
+	Ranking          *int                `json:"ranking"`
+	Elo              *int                `json:"elo"`
+	Account          AccountModel        `json:"account"`
+	CurrentLeague    *CurrentLeagueModel `json:"current_league"`
+	CreatedAt        time.Time           `json:"created_at"`
 }
 
 type AccountModel struct {
@@ -56,8 +57,4 @@ type UpdatePlayerRequestModel struct {
 	Weight     *float64 `json:"weight"`
 	Handedness *string  `json:"handedness"`
 	Racket     *string  `json:"racket"`
-}
-
-type UpdateLeaguePlayerRequestModel struct {
-	CurrentLeagueId *string `json:"current_league_id"`
 }
