# server/v1/v1.go
@@ -10,6 +10,7 @@ import (
 	"github.com/markovidakovic/gdsi/server/middleware"
 	"github.com/markovidakovic/gdsi/server/v1/auth"
 	"github.com/markovidakovic/gdsi/server/v1/courts"
+	"github.com/markovidakovic/gdsi/server/v1/leagueplayers"
 	"github.com/markovidakovic/gdsi/server/v1/leagues"
 	"github.com/markovidakovic/gdsi/server/v1/matches"
 	"github.com/markovidakovic/gdsi/server/v1/me"
@@ -25,9 +26,6 @@ func MountRouter(cfg *config.Config, db *db.Conn) func(r chi.Router) {
 			r.Route("/auth", auth.Route(cfg, db))
 		})
 		r.Group(func(r chi.Router) {
-			// initialize routers if necessary
-			playersRtr := players.NewRouter(cfg, db)
-
 			// seek, verify and validate jwt
 			r.Use(jwtauth.Verifier(cfg.JwtAuth))
 			r.Use(jwtauth.Authenticator(cfg.JwtAuth))
@@ -35,10 +33,10 @@ func MountRouter(cfg *config.Config, db *db.Conn) func(r chi.Router) {
 
 			r.Route("/courts", courts.Route(cfg, db))
 			r.Route("/me", me.Route(cfg, db))
-			r.Route("/players", playersRtr.RouteGlobal())
+			r.Route("/players", players.Route(cfg, db))
 			r.Route("/seasons", seasons.Route(cfg, db))
 			r.Route("/seasons/{seasonId}/leagues", leagues.Route(cfg, db))
-			r.Route("/seasons/{seasonId}/leagues/{leagueId}/players", playersRtr.RouteLeague())
+			r.Route("/seasons/{seasonId}/leagues/{leagueId}/players", leagueplayers.Route(cfg, db))
 			r.Route("/seasons/{seasonId}/leagues/{leagueId}/matches", matches.Route(cfg, db))
 			r.Route("/seasons/{seasonId}/leagues/{leagueId}/standings", standings.Route(cfg, db))
 		})
